// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorNotifications does not render the GTE message if there are multiple unsatisfied scopes 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--win-error"
    id="authentication-error"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-11-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Site Kit can't access necessary data
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p>
              <span>
                Site Kit can't access all relevant data because you haven't granted all permissions requested during setup. To use Site Kit, you'll need to redo the setup for: Tag Manager and Analytics – make sure to approve all permissions at the authentication stage.
              </span>
               
            </p>
          </div>
          <a
            class="mdc-button googlesitekit-notification__cta googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
            href="test-url?redirect=http%3A%2F%2Flocalhost%2F"
            role="button"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Redo setup
            </span>
          </a>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--order-3-desktop mdc-layout-grid__cell--order-3-tablet mdc-layout-grid__cell--order-3-phone"
        >
          <div
            class="googlesitekit-publisher-win__icons"
          >
            <svg />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ErrorNotifications renders UnsatisfiedScopesAlert when user is authenticated 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--win-error"
    id="authentication-error"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-11-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Site Kit can't access necessary data
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p>
              <span>
                Site Kit can't access the relevant data from Analytics because you haven't granted all permissions requested during setup. To use Site Kit, you'll need to redo the setup for Analytics – make sure to approve all permissions at the authentication stage.
              </span>
               
            </p>
          </div>
          <a
            class="mdc-button googlesitekit-notification__cta googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
            href="test-url?redirect=http%3A%2F%2Flocalhost%2F"
            role="button"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Redo setup
            </span>
          </a>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--order-3-desktop mdc-layout-grid__cell--order-3-tablet mdc-layout-grid__cell--order-3-phone"
        >
          <div
            class="googlesitekit-publisher-win__icons"
          >
            <svg />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ErrorNotifications renders the GTE message when the only unsatisfied scope is the tagmanager readonly scope 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--win-error"
    id="authentication-error-gte"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-11-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-3-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Site Kit needs additional permissions to detect updates to tags on your site
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p>
              <span>
                To continue using Analytics with Site Kit, you need to grant permission to check for any changes in your Google tag’s target Analytics property. The Google tag feature was recently updated to allow users to change a tag’s connected Analytics property without editing site code. Because of this change, Site Kit now must regularly check if the tag on your site matches the Analytics property destination.
              </span>
               
              <a
                aria-label="Learn more (opens in a new tab)"
                class="googlesitekit-cta-link"
                href="https://support.google.com/tagmanager/answer/11994839?hl=en-US"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Learn more
                </span>
                <span
                  class="googlesitekit-icon-wrapper"
                  style="margin-left: 5px;"
                >
                  <svg />
                </span>
              </a>
            </p>
          </div>
          <a
            class="mdc-button googlesitekit-notification__cta googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
            href="test-url?redirect=http%3A%2F%2Flocalhost%2F&additional_scopes%5B0%5D=gttps%3A%2F%2Fwww.googleapis.com%2Fauth%2Ftagmanager.readonly"
            role="button"
            target="_self"
          >
            <span
              class="mdc-button__label"
            >
              Grant permission
            </span>
          </a>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1 mdc-layout-grid__cell--order-3-desktop mdc-layout-grid__cell--order-3-tablet mdc-layout-grid__cell--order-3-phone"
        >
          <div
            class="googlesitekit-publisher-win__icons"
          >
            <svg />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
